--- a/client/assets/css/mainView.css
+++ b/client/assets/css/mainView.css
@@ -28,11 +28,12 @@ h1 {
 .menuBar {
 	height: 37px;
 	width: 100%;
-	background-color: #444;
+
 }
 
 .menuBar ul {
-	padding-left: 25px;
+	text-align: center;
+
 	list-style-type: none;
 }
 
@@ -42,6 +43,7 @@ h1 {
 }
 
 .menuBar ul li a {
+	background-color: #444;
 	font-size: 15pt;
 	display: block;
 	color: #BBB;
