--- a/client/components/dashboard/dashboardView.html
+++ b/client/components/dashboard/dashboardView.html
@@ -37,7 +37,7 @@
 					
 				<div ng-repeat='confirmedRoute in route.confirmedPassengerRoutes track by $index'>
 					<div class = 'confirmedPassenger'>
-						<h6>{{confirmedRoute.passengerInformation.name}}</h6>
+						<h6>{{confirmedRoute.name}}</h6>
 						<img ng-src= {{confirmedRoute.passengerInformation.picture}}  />
 						<h6>From: {{confirmedRoute.startLabel}}</h6>
 						<h6>To: {{confirmedRoute.endLabel}}</h6>
@@ -50,8 +50,7 @@
 				<span ng-show= "route.prospectivePassengerRoutes.length <= 0">No Prospective Passengers</span>
 				<div ng-repeat='prospectiveRoute in route.prospectivePassengerRoutes track by $index'>
 					<div class = 'notConfirmed' ng-click="confirmPassenger(prospectiveRoute._id, route._id)">
-						<h6>{{prospectiveRoute.passengerInformation.name}}</h6>
-						
+						<h6>{{prospectiveRoute.name}}</h6>
 						<img ng-src= {{prospectiveRoute.passengerInformation.picture}}  />
 						<h6>From: {{prospectiveRoute.startLabel}}</h6>
 						<h6>To: {{prospectiveRoute.endLabel}}</h6>
