--- a/client/assets/css/mainView.css
+++ b/client/assets/css/mainView.css
@@ -12,17 +12,27 @@ html {
 }
 
 h1 {
+
 	padding: 20px;
 	text-align: center;
 }
 
 .logo {
-	background: none;
+	border: 1px solid black;
+	margin: 20px auto;
+	height: 60px;
+	width: 220px;
+	background: #EEE;
+	border-radius: 20px;
+
 }
 
-.logo h1 {
+.logo p {
+	font-weight: bold;
+	text-align: center;
+	line-height: 60px;
 	font-family: sans-serif;
-	font-size: 400%;
+	font-size: 30pt;
 }
 
 .menuBar {
