--- a/client/assets/css/selectDriverView.css
+++ b/client/assets/css/selectDriverView.css
@@ -1,29 +1,38 @@
-#driverInfo div {
+#driverInfo {
 	border: 1px solid black;
 	position: relative;
 	padding: 20px;
 	width: 50%;
-	background-color: #EE9;
 	margin: 10px auto;
 	height: 200px;
 }
 
-#driverInfo div p {
+#driverInfo p {
 	font-size: 17pt;
 	font-weight: bold;
 }
-#driverInfo div:hover {
-	background-color: #FF9;
-}
 
-#driverInfo div img {
+#driverInfo img {
 	border: 1px solid black;
 	display: inline;
 	float: left;
 	height: 200px;
 }
+.notChecked {
+	background-color: #EE9;
+}
 
-#driverInfo div .content {
+.notChecked:hover {
+	background-color: #FF9;
+}
+.checked {
+	background-color: #BFB;
+}
+.checked:hover {
+	background-color: #AEA;
+}
+
+#driverInfo .content {
 	height: 120px;
 
 	margin: 30px 0px 0px 320px;
