--- a/client/assets/css/dashboardView.css
+++ b/client/assets/css/dashboardView.css
@@ -1,7 +1,25 @@
 .dashboardView {
 	position: relative;
 	margin: auto;
-	width: 60%;
+	width: 700px;
+}
+
+.dashboardIntro {
+	border: 1px solid black;
+	margin: 20px auto;
+	height: 50px;
+	width: 200px;
+	background: #EEE;
+	border-radius: 10px;
+
+}
+
+.dashboardIntro p {
+	font-weight: bold;
+	text-align: center;
+	line-height: 50px;
+	font-family: sans-serif;
+	font-size: 17pt;
 }
 
 .dashboardView ul {
@@ -36,7 +54,7 @@
 }
 .routeRender {
 	padding: 10px;
-	width: 90%;
+	width: 650px;
 	margin: 10px 0px;
 }
 .driverInfo {
@@ -73,7 +91,7 @@
 
 .driverInfo .nameDays {
 	height: 50px;
-	width: 80%;
+	width: 650px;
 }
 .driverInfo .nameDays p {
 	font-weight: bold;
@@ -83,7 +101,7 @@
 
 .driverInfo .startEnd {
 	height: 40px;
-	width: 80%;
+	width: 650px;
 }
 
 .driverInfo .startEnd p {
