--- a/client/components/dashboard/dashboardView.html
+++ b/client/components/dashboard/dashboardView.html
@@ -1,7 +1,6 @@
 <div class = 'dashboardView'>
-	<div>
-		<h1>{{username}}</h1>
-		<p></p>
+	<div class = 'dashboardIntro'>
+		<p>{{username}}</p>
 	</div>
 
 	<div>
