--- a/client/assets/css/selectDriverView.css
+++ b/client/assets/css/selectDriverView.css
@@ -34,7 +34,7 @@ table td:nth-of-type(3) {
 	border: 1px solid black;
 	display: inline;
 	float: left;
-	height: 200px;
+	height: 150px;
 }
 .notChecked {
 	background-color: #EE9;
@@ -49,7 +49,6 @@ table td:nth-of-type(3) {
 .checked:hover {
 	background-color: #AEA;
 }
-
 .map-container {
 	float: right;
 }
@@ -61,7 +60,8 @@ table td:nth-of-type(3) {
 	width: 500px;
 }
 
-#driverInfo div .content {
+#driverInfo .content {
 	height: 120px;
-	margin: 30px 0px 0px 32px;
+	margin: 30px 0px 0px 360px;
+
 }
