--- a/client/components/selectDriver/selectDriverView.html
+++ b/client/components/selectDriver/selectDriverView.html
@@ -1,28 +1,30 @@
 
 <div id = 'driverInfo'  class = 'notChecked' ng-repeat = 'route in driverRoutes track by $index'>
-	<table ng-click="selectDriverRoute(route.driverRoute._id)">
-		<tr>
-			<td>
-	  <img src="{{route.driver.picture}}">
-	</td>
-	<td class='content'>
-		  <p>{{route.driver.name}}</p>
-		  <p>Seats: {{route.driverRoute.seats}}</p>
-		  <p>Fee: ${{route.driverRoute.fee}}</p>
-		  <p>{{route.driverRoute.startLabel}}</p>
-		  <p>{{route.driverRoute.endLabel}}</p>
-		 <a ng-click="selectDriverRoute(route.driverRoute._id)">Select Route</a>
-	</td>
-	<td>
-	    <div class="map-container" map-lazy-load="https://maps.google.com/maps/api/js"
-	    map-lazy-load-params="{{googleMapsUrl}}">
-	    <!-- map centers halfway between start and end -->
-	      <ng-map class="map" center="{{[(route.driverRoute.start[0] + route.driverRoute.end[0]) / 2, (route.driverRoute.start[1] + route.driverRoute.end[1]) / 2]}}" zoom="12">
-	      <marker position="{{route.driverRoute.start}}" label="S"></marker>
-	                <marker position="{{route.driverRoute.end}}" label="E"></marker>
-	    </ng-map>
-	    </div>
-	  </td>
-	</tr>
-  </table>
+	<div class = 'driver'>
+		<table ng-click="selectDriverRoute(route.driverRoute._id)">
+			<tr>
+				<td>
+		  <img src="{{route.driver.picture}}">
+		</td>
+		<td class='content'>
+			  <p>{{route.driver.name}}</p>
+			  <p>Seats: {{route.driverRoute.seats}}</p>
+			  <p>Fee: ${{route.driverRoute.fee}}</p>
+			  <p>{{route.driverRoute.startLabel}}</p>
+			  <p>{{route.driverRoute.endLabel}}</p>
+			 <a ng-click="selectDriverRoute(route.driverRoute._id)">Select Route</a>
+		</td>
+		<td>
+		    <div class="map-container" map-lazy-load="https://maps.google.com/maps/api/js"
+		    map-lazy-load-params="{{googleMapsUrl}}">
+		    <!-- map centers halfway between start and end -->
+		      <ng-map class="map" center="{{[(route.driverRoute.start[0] + route.driverRoute.end[0]) / 2, (route.driverRoute.start[1] + route.driverRoute.end[1]) / 2]}}" zoom="12">
+		      <marker position="{{route.driverRoute.start}}" label="S"></marker>
+		                <marker position="{{route.driverRoute.end}}" label="E"></marker>
+		    </ng-map>
+		    </div>
+		  </td>
+		</tr>
+	  </table>
+  </div>
 </div>
