took out a console.log

--- a/client/components/dashboard/dashboardView.html
+++ b/client/components/dashboard/dashboardView.html
@@ -3,7 +3,7 @@
 		<p>{{username}}</p>
 	</div>
 
-	<div>
+	<div class = 'allRoutes'>
 
 		<ul ng-repeat= 'route in passengerRoutes track by $index' ng-hide= "user.IsDriver">
 			<li>
