--- a/client/assets/css/dashboardView.css
+++ b/client/assets/css/dashboardView.css
@@ -42,7 +42,7 @@
 .notConfirmed:hover, .prospective:hover {
 	background-color: #EEA;
 }
-.singleRoute {
+.singleRoute, .allRoutes {
 	background-color: #EEE;
 	margin-bottom: 10px;
 	padding: 10px;
